--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "day19",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +24,7 @@
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "process": "^0.11.10"
   }
 }
